removing  stylesheet  address

--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>EVERIN</title>
-    <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="">
   </head>
   <body>
     <div class="header">
