--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,7 @@
         <a class="htp" href="">How to apply</a>
         <a class="faq" href="">FAQs</a>
         <a class="cont" href="#footer">contact</a>
-        <a class="log" href="#signin">login</a>
+        <a class="log" href="https://agricultureproject.github.io/login/login.html">login</a>
       </div>
 
 
